Wenwen-added quality of service

--- a/Calc.html
+++ b/Calc.html
@@ -1,14 +1,26 @@
-<!Doctype html>
-
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-
-
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tip Calculator</title>
 </head>
-
 <body>
+    <h1>Tip Calculator</h1>
 
+<!-- Wenwen's code - quality of service -->
+<h2 id="quality">Step2:Choose Quality of Service</h2>
+<label for="qualityOfService">Choose the quality of service:</label>
+<select name="serviceQuality" id="qualityOfService">
+    <option value="">--Please choose an option--</option>
+    <option value="great">Great Service-20% tip</option>
+    <option value="good">Good Service-18% tip</option>
+    <option value="bad">Bad Service-15% tip</option>
+    
+</select>
+
+    <script src="tipCalc.js"></script>
 
 </body>
-
 </html>
